--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dot": "^1.1.3",
+    "dotenv": "^16.0.1",
     "env": "^0.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1"
